v0.27 Fix: Fixed background color on dropdown menu. Was too light.

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -74,7 +74,7 @@ a button:hover {
     position: absolute;
     top: 60px;
     right: 20px;
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(0,0,0, 0.2);
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
